--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -43,11 +43,12 @@ jobs:
         uses: actions/checkout@v4
         with:
           submodules: recursive
-      - name: Setup Pages
-        id: pages
-        uses: actions/configure-pages@v5
+      # - name: Setup Pages
+      #   id: pages
+      #   uses: actions/configure-pages@v5
       - name: Install Node.js dependencies
-        run: "[[ -f package-lock.json || -f npm-shrinkwrap.json ]] && npm ci || true"
+        working-directory: ./src/themes/docsy
+        run: "npm i"
       - name: Build with Hugo
         env:
           HUGO_CACHEDIR: ${{ runner.temp }}/hugo_cache
