--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -43,24 +43,20 @@ jobs:
         uses: actions/checkout@v4
         with:
           submodules: recursive
-      # - name: Setup Pages
-      #   id: pages
-      #   uses: actions/configure-pages@v5
       - name: Install Node.js dependencies
         working-directory: ./src/themes/docsy
         run: "npm i"
       - name: Build with Hugo
+        working-directory: ./src
         env:
           HUGO_CACHEDIR: ${{ runner.temp }}/hugo_cache
           HUGO_ENVIRONMENT: production
         run: |
-          hugo \
-            --minify \
-            --baseURL "${{ steps.pages.outputs.base_url }}/"
+          hugo --minify
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: ./public
+          path: ./src/public
 
   # Deployment job
   deploy:
