--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -37,12 +37,23 @@ jobs:
         run: |
           wget -O ${{ runner.temp }}/hugo.deb https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_extended_${HUGO_VERSION}_linux-amd64.deb \
           && sudo dpkg -i ${{ runner.temp }}/hugo.deb
-      - name: Install Dart Sass
-        run: sudo snap install dart-sass
+      # - name: Install Dart Sass
+      #   run: sudo snap install dart-sass
       - name: Checkout
         uses: actions/checkout@v4
         with:
           submodules: recursive
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+      # - name: Setup HUGO
+      #   working-directory: ./src
+      #   run: "npm install hugo-extended --save-dev"
+
+      - name: Setup Docsy Dependencies
+        working-directory: ./src
+        run: "npm install --save-dev autoprefixer postcss-cli"
+
       - name: Install Node.js dependencies
         working-directory: ./src/themes/docsy
         run: "npm i"
